Created html paragraph

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <p>La tua nuova password fiammante è: <span id="pass"></span> </p>
     
     <!-- Javascript -->
     <script src="./JS/javascript.js"></script>
