added text in paragraph

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <p>La tua nuova password fiammante è: <span id="pass"></span> </p>
+    <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span> </p>
     
     <!-- Javascript -->
     <script src="./JS/javascript.js"></script>
