added bgc image & main layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
 </head>
 
 <body>
-    <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span> </p>
-    
+
+    <!-- Header -->
+    <header>
+        <h2></h2>
+    </header>
+
+    <!-- Main -->
+    <main>
+        <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span></p>
+    </main>
+
     <!-- Javascript -->
     <script src="./JS/javascript.js"></script>
 </body>
