added container & header content

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 <body>
 
     <!-- Header -->
-    <header>
-        <h2></h2>
+    <header class="d-flex justify-center align-center">
+        <h2>SUPER MEGA SECURE PASSWORD GENERATOR 2000</h2>
     </header>
 
     <!-- Main -->
     <main>
-        <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span></p>
+        <div class="container">
+            <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span></p>
+        </div>
     </main>
 
     <!-- Javascript -->
-    <script src="./JS/javascript.js"></script>
+    <!-- <script src="./JS/javascript.js"></script> -->
 </body>
 </html>
