added main content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
 
     <!-- Main -->
-    <main>
-        <div class="container">
+    <main class="d-flex justify-center align-center">
+        <div class="container d-flex justify-center align-center megablock">
             <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span></p>
         </div>
     </main>
