Added google font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Class #100">
     <meta name="keywords" content="Password Manager, pwd, Javascript">
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Pangolin&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <title>JS PWD Manager Wanna Be</title>
 </head>
