--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Pangolin&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <title>JS PWD Manager Wanna Be</title>
 </head>
@@ -20,17 +20,20 @@
 
     <!-- Header -->
     <header class="d-flex justify-center align-center">
-        <h2>SUPER MEGA SECURE PASSWORD GENERATOR 2000</h2>
+        <h1>SUPER MEGA SECURE PASSWORD GENERATOR 2000</h1>
     </header>
 
     <!-- Main -->
     <main class="d-flex justify-center align-center">
-        <div class="container d-flex justify-center align-center megablock">
-            <p>La tua nuova password fiammante e supersicura è: <span id="pass"></span></p>
+        <div class="container d-flex justify-center align-center flex-column megablock">
+            <p>La tua nuova password fiammante e supersicura è: </p>
+            <div id="risposta" class="d-flex justify-center align-center">
+                <span id="pass"></span>
+            </div>
         </div>
     </main>
 
     <!-- Javascript -->
-    <!-- <script src="./JS/javascript.js"></script> -->
+    <script src="./JS/javascript.js"></script>
 </body>
 </html>
